{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 702,
  "lineage": "c12d557e-1fb0-63f2-a8ea-85318610da73",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "wp_private_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-07b6449e23e4a36d6",
            "id": "rtb-07b6449e23e4a36d6",
            "owner_id": "779395313099",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "wp_private"
            },
            "vpc_id": "vpc-0ac15359c3e764134"
          },
          "depends_on": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "wp-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:779395313099:loadbalancer/wp-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "wp-elb-451837413.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 5,
                "interval": 7,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "wp-elb",
            "idle_timeout": 400,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "wp-elb",
            "security_groups": [
              "sg-080f7099ec31f31f5"
            ],
            "source_security_group": "779395313099/wp_public_sg",
            "source_security_group_id": "sg-080f7099ec31f31f5",
            "subnets": [
              "subnet-00317d1f4f5554d4d",
              "subnet-0d48cf201ac01a842"
            ],
            "tags": {
              "Name": "wp_elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_security_group.wp_public_sg",
            "aws_subnet.wp_public1_subnet",
            "aws_subnet.wp_public2_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wp_dev",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-b73b63a0",
            "arn": "arn:aws:ec2:us-east-1:779395313099:instance/i-0bdbaac3f011ce3ae",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "s3_access",
            "id": "i-0bdbaac3f011ce3ae",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kryptonite",
            "monitoring": false,
            "primary_network_interface_id": "eni-072924ba60ab8e444",
            "private_dns": "ip-10-0-1-127.ec2.internal",
            "private_ip": "10.0.1.127",
            "public_dns": "ec2-18-234-71-44.compute-1.amazonaws.com",
            "public_ip": "18.234.71.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0034ef19e03e2ebe3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d48cf201ac01a842",
            "tags": {
              "Name": "wp_dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-040de4ce39dcfd18a"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.s3_access_profile",
            "aws_key_pair.wp_auth",
            "aws_s3_bucket.code",
            "aws_security_group.wp_dev_sg",
            "aws_subnet.wp_public1_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wp_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c927a43ca888fa33",
            "owner_id": "779395313099",
            "tags": {
              "Name": "wp_igw"
            },
            "vpc_id": "vpc-0ac15359c3e764134"
          },
          "depends_on": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wp_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-082d1200d3aeaa940",
            "owner_id": "779395313099",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c927a43ca888fa33",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wp_public"
            },
            "vpc_id": "vpc-0ac15359c3e764134"
          },
          "depends_on": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_private1_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9279ec6c6a09e42",
            "route_table_id": "rtb-07b6449e23e4a36d6",
            "subnet_id": "subnet-0630cad16aa432bc3"
          },
          "depends_on": [
            "aws_default_route_table.wp_private_rt",
            "aws_subnet.wp_private1_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_private2_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00234c948d9e00789",
            "route_table_id": "rtb-07b6449e23e4a36d6",
            "subnet_id": "subnet-0c9242770bb558be8"
          },
          "depends_on": [
            "aws_default_route_table.wp_private_rt",
            "aws_subnet.wp_private2_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_public1_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021d0ae55fd9ceee4",
            "route_table_id": "rtb-082d1200d3aeaa940",
            "subnet_id": "subnet-0d48cf201ac01a842"
          },
          "depends_on": [
            "aws_route_table.wp_public_rt",
            "aws_subnet.wp_public1_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_public2_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e07ac584bcd90b6",
            "route_table_id": "rtb-082d1200d3aeaa940",
            "subnet_id": "subnet-00317d1f4f5554d4d"
          },
          "depends_on": [
            "aws_route_table.wp_public_rt",
            "aws_subnet.wp_public2_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_rds1_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4a3fcbfe823f654",
            "route_table_id": "rtb-07b6449e23e4a36d6",
            "subnet_id": "subnet-0006ee5ef9cce273d"
          },
          "depends_on": [
            "aws_default_route_table.wp_private_rt",
            "aws_subnet.wp_rds1_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_rds2_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc286795b80bc716",
            "route_table_id": "rtb-07b6449e23e4a36d6",
            "subnet_id": "subnet-09c7075d7d286bc5c"
          },
          "depends_on": [
            "aws_default_route_table.wp_private_rt",
            "aws_subnet.wp_rds2_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_rds3_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a668d1757e516e53",
            "route_table_id": "rtb-07b6449e23e4a36d6",
            "subnet_id": "subnet-0c4a7c65dfa59874e"
          },
          "depends_on": [
            "aws_default_route_table.wp_private_rt",
            "aws_subnet.wp_rds3_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_dev_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779395313099:security-group/sg-040de4ce39dcfd18a",
            "description": "used for access to dev instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040de4ce39dcfd18a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wp_dev_sg",
            "name_prefix": null,
            "owner_id": "779395313099",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0ac15359c3e764134"
          },
          "depends_on": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_private_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779395313099:security-group/sg-02d2a676e99a1ecec",
            "description": " used by private subnet host ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d2a676e99a1ecec",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "wp_private_sg",
            "name_prefix": null,
            "owner_id": "779395313099",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0ac15359c3e764134"
          },
          "depends_on": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_public_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779395313099:security-group/sg-080f7099ec31f31f5",
            "description": "used for the elastic load balancer fpr public access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080f7099ec31f31f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wp_public_sg",
            "name_prefix": null,
            "owner_id": "779395313099",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0ac15359c3e764134"
          },
          "depends_on": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_rds_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779395313099:security-group/sg-0f0fcb9e34161a5d6",
            "description": "for rdb instances access",
            "egress": [],
            "id": "sg-0f0fcb9e34161a5d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "72.191.201.177/32"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02d2a676e99a1ecec",
                  "sg-040de4ce39dcfd18a",
                  "sg-080f7099ec31f31f5"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "wp_rds_sg",
            "name_prefix": null,
            "owner_id": "779395313099",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0ac15359c3e764134"
          },
          "depends_on": [
            "aws_security_group.wp_dev_sg",
            "aws_security_group.wp_private_sg",
            "aws_security_group.wp_public_sg",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_private1_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779395313099:subnet/subnet-0630cad16aa432bc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0630cad16aa432bc3",
            "map_public_ip_on_launch": false,
            "owner_id": "779395313099",
            "tags": {
              "Name": "wp_private1"
            },
            "vpc_id": "vpc-0ac15359c3e764134"
          },
          "depends_on": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_private2_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779395313099:subnet/subnet-0c9242770bb558be8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0c9242770bb558be8",
            "map_public_ip_on_launch": false,
            "owner_id": "779395313099",
            "tags": {
              "Name": "wp_private2"
            },
            "vpc_id": "vpc-0ac15359c3e764134"
          },
          "depends_on": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_public1_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779395313099:subnet/subnet-0d48cf201ac01a842",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d48cf201ac01a842",
            "map_public_ip_on_launch": true,
            "owner_id": "779395313099",
            "tags": {
              "Name": "wp_public1"
            },
            "vpc_id": "vpc-0ac15359c3e764134"
          },
          "depends_on": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_public2_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779395313099:subnet/subnet-00317d1f4f5554d4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00317d1f4f5554d4d",
            "map_public_ip_on_launch": true,
            "owner_id": "779395313099",
            "tags": {
              "Name": "wp_public2"
            },
            "vpc_id": "vpc-0ac15359c3e764134"
          },
          "depends_on": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_rds1_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779395313099:subnet/subnet-0006ee5ef9cce273d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0006ee5ef9cce273d",
            "map_public_ip_on_launch": false,
            "owner_id": "779395313099",
            "tags": {
              "Name": "wp_rds1"
            },
            "vpc_id": "vpc-0ac15359c3e764134"
          },
          "depends_on": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_rds2_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779395313099:subnet/subnet-09c7075d7d286bc5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-09c7075d7d286bc5c",
            "map_public_ip_on_launch": false,
            "owner_id": "779395313099",
            "tags": {
              "Name": "wp_rds2"
            },
            "vpc_id": "vpc-0ac15359c3e764134"
          },
          "depends_on": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_rds3_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779395313099:subnet/subnet-0c4a7c65dfa59874e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-0c4a7c65dfa59874e",
            "map_public_ip_on_launch": false,
            "owner_id": "779395313099",
            "tags": {
              "Name": "wp_rds3"
            },
            "vpc_id": "vpc-0ac15359c3e764134"
          },
          "depends_on": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wp_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779395313099:vpc/vpc-0ac15359c3e764134",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b227e0d542f61f53",
            "default_route_table_id": "rtb-07b6449e23e4a36d6",
            "default_security_group_id": "sg-0026b61639e06ff7f",
            "dhcp_options_id": "dopt-207cf245",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ac15359c3e764134",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07b6449e23e4a36d6",
            "owner_id": "779395313099",
            "tags": {
              "Name": "wp_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "wp_private-s3_point",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "54.231.0.0/17",
              "52.216.0.0/15"
            ],
            "id": "vpce-00dee35c4c77f8e03",
            "owner_id": "779395313099",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-07b6449e23e4a36d6",
              "rtb-082d1200d3aeaa940"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0ac15359c3e764134"
          },
          "depends_on": [
            "aws_route_table.wp_public_rt",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    }
  ]
}